[package]
name = "yrwsm-api"
version = "0.1.0"
authors = ["fkropfhamer <fabian.kropfhamer@sblum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
serde = { version = "1.0", features = ["derive"] }
rocket_contrib = "0.4"